--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,15 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cached_network_image: ^3.0.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.1.2
   flutter_localizations: # Add this line
     sdk: flutter         # Add this line
   http: 0.13.1
+  shimmer: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
